--- a/src/main/webapp/adminDashboard.html
+++ b/src/main/webapp/adminDashboard.html
@@ -349,10 +349,10 @@
 								<label for="update-program-search">Program</label>
 								<select id="update-program-search" name="update-program-search" class="form-control" required
 									aria-placeholder="Select Program">
-									<option value="Life Skills">Life Skills</option>
-									<option value="Computer ">Computer</option>
-									<option value="Retail Management ">Retail Management</option>
-									<option value="Point of Sale ">Point of Sale</option>
+									<option value="Life">Life Skills</option>
+									<option value="Computer">Computer</option>
+									<option value="Retail">Retail Management</option>
+									<option value="Point">Point of Sale</option>
 								</select>
 							</div>
 							
@@ -374,9 +374,9 @@
 								<label for="delete-program-search">Program</label>
 								<select id="delete-program-search" name="delete-program-search" class="form-control" required
 									aria-placeholder="Select Program">
-									<option value="Life Skills">Life Skills</option>
-									<option value="Computer ">Computer</option>
-									<option value="Retail Management ">Retail Management</option>
+									<option value="Life">Life Skills</option>
+									<option value="Computer">Computer</option>
+									<option value="Retail">Retail Management</option>
 									<option value="Point of Sale ">Point of Sale</option>
 								</select>
 							</div>
@@ -597,9 +597,9 @@
 								<label for="search-program-search">Program</label>
 								<select id="search-program-search" name="search-program-search" class="form-control" required
 									aria-placeholder="Select Program">
-									<option value="Life Skills">Life Skills</option>
+									<option value="Life">Life Skills</option>
 									<option value="Computer ">Computer</option>
-									<option value="Retail Management ">Retail Management</option>
+									<option value="Retail">Retail Management</option>
 									<option value="Point of Sale ">Point of Sale</option>
 								</select>
 							</div>
@@ -925,13 +925,21 @@
 
 		}
 
-		// Function to handle submission of delete form
+//##########################################################################################################
 		function submitAndDeleteForm() {
 
-
 			var studentId = document.getElementById('identity-number-delete').value;
-
-			fetch('findStudent')
+			var program = document.getElementById('delete-program-search').value;
+			
+			const requestOptions = {
+			    method: 'POST',
+			    headers: {
+			        'Content-Type': 'application/json'
+			    },
+			    body: JSON.stringify({ name: program })
+			};
+			
+			fetch('findDeleteStudent' , requestOptions)
 				.then(response => response.json())
 				.then(users => {
 					let found = false;
@@ -941,7 +949,7 @@
 							found = true;
 
 							displayErrorMessageDelete("Student Deleted");
-							postStudentId(user.id);
+							postStudentId(user.id , program);
 
 
 						}
@@ -957,13 +965,13 @@
 		}
 
 
-		function postStudentId(studentId) {
+		function postStudentId(studentId , program) {
 			fetch('/delete-student', {
 				method: 'POST',
 				headers: {
 					'Content-Type': 'application/json'
 				},
-				body: JSON.stringify({id: studentId})
+				body: JSON.stringify({id: studentId , iProgram: program})
 
 			})
 				.catch(error => {
@@ -1242,13 +1250,22 @@
 			return true;
 		}
 
-
+//################################################################################################################################
 
 		function findStudent() {
 
 			var id = document.getElementById("up-up").value;
+			var program = document.getElementById("update-program-search").value;
 
-			fetch('findStudent')
+			    const requestOptions = {
+			        method: 'POST',
+			        headers: {
+			            'Content-Type': 'application/json'
+			        },
+			        body: JSON.stringify({ name: program })
+			    };
+
+			fetch('findUpdateStudent' , requestOptions)
 				.then(response => response.json())
 				.then(users => {
 					let found = false;
@@ -1294,9 +1311,18 @@
 		function studentSearch() {
 
 
-			var studentId = document.getElementById('student-search').value;
+			var studentId = document.getElementById('student-search').value
+			var program = document.getElementById("search-program-search").value;
+			
+			    const requestOptions = {
+			        method: 'POST',
+			        headers: {
+			            'Content-Type': 'application/json'
+			        },
+			        body: JSON.stringify({ name: program })
+			    };
 
-			fetch('findStudent')
+			fetch('findSearchStudent' , requestOptions)
 				.then(response => response.json())
 				.then(users => {
 					let found = false;
